--- a/M1U2/index.html
+++ b/M1U2/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV</title>
+    <link rel="stylesheet" href="./styles/styles.css">
 </head>
+
 <body>
     <header>
-        
+
         </div>
         <div class="info">
             <h1>Denis Diaz Moroni</h1>
@@ -17,12 +20,12 @@
             <br>
             <div class="profile-pic">
                 <img src="./img/cv.JPG" alt="foto" width="25%">
-            <p>Corrientes, Argentina</p>
-            <a href="mailto:denisdiazmoroni@gmail.com">denisdiazmoroni@gmail.com</a>
-            <p>3794063974</p>
-            <p>salta 1510</p>
-        </div>
-        
+                <p>Corrientes, Argentina</p>
+                <a href="mailto:denisdiazmoroni@gmail.com">denisdiazmoroni@gmail.com</a>
+                <p>3794063974</p>
+                <p>salta 1510</p>
+            </div>
+
     </header>
     <main>
         <section class="education">
@@ -38,8 +41,8 @@
             <ul>
                 <li>Producción de programa radial y TV en LT7,
                     radio continental y telenord.</li>
-                <li>Community Manager: Santiago Bocha sheri-
-                    dan - Tiempo de Reencuentro - CDV joven - Catedral de Vida</li>
+                <li>Community Manager: Santiago Bocha sheridan - Tiempo de Reencuentro - CDV joven - Catedral de Vida
+                </li>
             </ul>
         </section>
         <section class="skills">
@@ -53,6 +56,25 @@
                 <li>Corel Draw</li>
             </ul>
         </section>
+        <section class="contact">
+            <h2>Contacto</h2>
+            <form action="#" method="post">
+                <div class="form-group">
+                    <label for="name">Nombre:</label>
+                    <input type="text" id="name" name="name" required placeholder="escribe tu nombre aquí">
+                </div>
+                <div class="form-group">
+                    <label for="email">Email:</label>
+                    <input type="email" id="email" name="email" required placeholder="ejemplo@email.com">
+                </div>
+                <div class="form-group">
+                    <label for="message">Mensaje:</label>
+                    <textarea id="message" name="message" rows="5" required placeholder="tu consulta"></textarea>
+                </div>
+                <button type="submit">Enviar</button>
+            </form>
+        </section>
     </main>
 </body>
+
 </html>
