--- a/M2U4/Mi Sitio/index.html
+++ b/M2U4/Mi Sitio/index.html
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">CDN JOVEN</a>
@@ -24,21 +25,25 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link active" aria-current="page" href="#home">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Nosotros</a>
+            <a class="nav-link" href="#servicios">servicios</a>
           <li class="nav-item">
-            <a class="nav-link" href="#">Comunidad</a>
+            <a class="nav-link" href="#novedades">novedades</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#contacto">Contacto</a>
+          </li>
+
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Programas
             </a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Enciende Podcast</a></li>
-              <li><a class="dropdown-item" href="#">Plenitud</a></li>
-              <li><a class="dropdown-item" href="#">cdv Radio</a></li>
+              <li><a class="dropdown-item" href="enciendepodcast.html">Enciende Podcast</a></li>
+              <li><a class="dropdown-item" href="plenitud.html">Plenitud</a></li>
+              <li><a class="dropdown-item" href="#cdvradio">cdv Radio</a></li>
             </ul>
           </li>
         </ul>
@@ -95,53 +100,102 @@
     </div>
   </div>
 
-  <div class="service row row-cols-1 row-cols-md-2 g-4">
+  <div id="servicios" class="service row row-cols-1 row-cols-md-2 g-4 scroll-section">
     <div class="col">
-      <div class="card">
-        <img src="../Mi Sitio/img/img1.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
+      <a href="https://www.bibliaon.com/es/devocional_diario/" target="_blank"
+        style="color: inherit; text-decoration: none;">
+        <div class="card">
+          <div class="row g-0">
+            <div class="col-md-4">
+              <img src="../Mi Sitio/img/img1.jpg" class="card-img-top" alt="...">
+      </a>
+    </div>
+    <div class="col-md-8">
+      <div class="card-body">
+        <a href="https://www.bibliaon.com/es/devocional_diario/" target="_blank"
+          style="color: inherit; text-decoration: none;">
           <h5 class="card-title">devocional diario</h5>
-          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
-            content. This content is a little bit longer.</p>
-        </div>
-      </div>
-    </div>
-    <div class="col">
-      <div class="card">
-        <img src="../Mi Sitio/img/img2.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">cdv Music</h5>
-          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
-            content. This content is a little bit longer.</p>
-        </div>
-      </div>
-    </div>
-    <div class="col">
-      <div class="card">
-        <img src="../Mi Sitio/img/img3.jpeg" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Escuela Joven</h5>
-          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
-            content.</p>
-        </div>
-      </div>
-    </div>
-    <div class="col">
-      <div class="card">
-        <img src="../Mi Sitio/img/img4.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">consultoría</h5>
-          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
-            content.</p>
-        </div>
+        </a>
+        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
+          content. This content is a little bit longer.</p>
       </div>
     </div>
   </div>
+  </div>
 
-
-  <div class="row">
-    <div class="col-md-6 mb-3">
+  </div>
+  <div class="col">
+    <a href="https://open.spotify.com/playlist/3U7F6ooo6JEJH9a8c36rU9" target="_blank"
+      style="color: inherit; text-decoration: none;">
       <div class="card">
+        <div class="row g-0">
+          <div class="col-md-4">
+            <img src="../Mi Sitio/img/img2.jpg" class="card-img-top" alt="...">
+    </a>
+  </div>
+  <div class="col-md-8">
+    <div class="card-body">
+      <a href="https://open.spotify.com/playlist/3U7F6ooo6JEJH9a8c36rU9" target="_blank"
+        style="color: inherit; text-decoration: none;">
+        <h5 class="card-title">cdv Music</h5>
+      </a>
+      <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
+        content. This content is a little bit longer.</p>
+    </div>
+  </div>
+  </div>
+  </div>
+  </div>
+  <div class="col">
+    <a href="http://iete.com.ar/" target="_blank"
+      style="color: inherit; text-decoration: none;">
+      <div class="card">
+        <div class="row g-0">
+          <div class="col-md-4">
+            <img src="../Mi Sitio/img/img3.jpeg" class="card-img-top" alt="...">
+    </a>
+  </div>
+  <div class="col-md-8">
+    <div class="card-body">
+      <a href="http://iete.com.ar/" target="_blank"
+        style="color: inherit; text-decoration: none;">
+        <h5 class="card-title">Escuela Joven</h5>
+      </a>
+      <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
+        content.</p>
+    </div>
+  </div>
+  </div>
+  </div>
+  </div>
+  <div class="col">
+    <a href="https://www.google.com/" target="_blank"
+      style="color: inherit; text-decoration: none;">
+      <div class="card">
+        <div class="row g-0">
+          <div class="col-md-4">
+            <img src="../Mi Sitio/img/img4.jpg" class="card-img-top" alt="...">
+    </a>
+  </div>
+  <div class="col-md-8">
+    <div class="card-body">
+      <a href="https://www.google.com/" target="_blank"
+        style="color: inherit; text-decoration: none;">
+        <h5 class="card-title">consultoría</h5>
+      </a>
+      <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
+        content.</p>
+    </div>
+  </div>
+  </div>
+  </div>
+  </div>
+  </div>
+
+
+  <div id="novedades" class="notice row card-2 scroll-section">
+    <div class="col-md-6 mb-3">
+      <div class="card-2">
         <div class="row g-0">
           <div class="col-md-4">
             <video controls class="img-fluid">
@@ -156,7 +210,8 @@
                 esse quasi suscipit veniam voluptatum nostrum possimus autem.</p>
               <p class="card-text">
                 <small class="text-muted">
-                  <a href="https://www.youtube.com/" class="link-live">transmisión en VIVO</a>
+                  <a href="https://www.youtube.com/" class="link-live" target="_blank"><span class="alerta">transmisión
+                      en VIVO</span></a>
                 </small>
               </p>
             </div>
@@ -166,7 +221,7 @@
     </div>
 
     <div class="col-md-6 mb-3">
-      <div class="card">
+      <div class="card-2">
         <div class="row g-0">
           <div class="col-md-4">
             <video controls class="img-fluid">
@@ -182,7 +237,8 @@
                 laudantium ipsa eius</p>
               <p class="card-text">
                 <small class="text-muted">
-                  <a href="https://www.google.com/intl/es-419_ar/forms/about/" class="link-styled">¡Inscríbete aquí!</a>
+                  <a href="https://www.google.com/intl/es-419_ar/forms/about/" class="link-styled"
+                    target="_blank">¡Inscríbete aquí!</a>
                 </small>
               </p>
             </div>
@@ -191,7 +247,7 @@
       </div>
     </div>
 
-    <div id="conocenos" class="row py-4">
+    <div id="contacto" class="row py-4">
       <div class="col-md-4 offset-md-2">
         <h2>Visitanos</h2>
         <div class="map">
@@ -201,42 +257,43 @@
       </div>
       <div class="col-md-4 mt-4 mt-sm-0">
         <h2>contactanos</h2>
-        <form class="row g-3">
-          <div class="col col-md-6">
-            <label for="nombre" class="form-label">Nombre</label>
-            <input type="text" class="form-control" id="nombre">
-          </div>
-          <div class="col col-md-6">
-            <label for="apellido" class="form-label">Apellido</label>
-            <input type="text" class="form-control" id="apellido">
-          </div>
-          <div class="col-12">
-            <label for="email" class="form-label">email</label>
-            <input type="email" class="form-control" id="aemail" placeholder="email@email.com">
-          </div>
-          <div class="col-12">
-            <label for="tel" class="form-label">Tel</label>
-            <input type="text" class="form-control" id="tel" placeholder="...">
-          </div>
-          <div class="col-12">
-            <label for="mensaje" class="form-label">mensaje</label>
-            <textarea class="form-control" id="mensaje" rows="3"></textarea>
-          </div>
-          <div class="col-12">
-            <button type="submit" class="btn btn-primary">enviar</button>
-          </div>
-        </form>
+        <div class="form-container">
+          <form class="row g-3">
+            <div class="col col-md-6">
+              <label for="nombre" class="form-label">Nombre</label>
+              <input type="text" class="form-control" id="nombre">
+            </div>
+            <div class="col col-md-6">
+              <label for="apellido" class="form-label">Apellido</label>
+              <input type="text" class="form-control" id="apellido">
+            </div>
+            <div class="col-12">
+              <label for="email" class="form-label">email</label>
+              <input type="email" class="form-control" id="aemail" placeholder="email@email.com">
+            </div>
+            <div class="col-12">
+              <label for="tel" class="form-label">Tel</label>
+              <input type="text" class="form-control" id="tel" placeholder="...">
+            </div>
+            <div class="col-12">
+              <label for="mensaje" class="form-label">mensaje</label>
+              <textarea class="form-control" id="mensaje" rows="3"></textarea>
+            </div>
+            <div class="col-12">
+              <button type="submit" class="btn btn-primary">enviar</button>
+            </div>
+          </form>
+        </div>
       </div>
-    </div>
 
+      <footer>
+        <p class="text-center">diseño por diaz moroni 2024</p>
+      </footer>
 
-    <footer>
-      <p class="text-center">diseñado por: Diaz Moroni</p>
-    </footer>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
+
 
 </html>
